old image link fix

--- a/gh-weblog/content/posts/markdown/2014-04-28-15-57-44.md
+++ b/gh-weblog/content/posts/markdown/2014-04-28-15-57-44.md
@@ -2,4 +2,4 @@ We took a Northern California road trip before the Mozilla All-Hands, photograph
 
 And I'll be spending lots of hours looking at the following interface:
 
-<a href="gh-weblog-2/images/5h.jpg" target="_blank"><img src="/gh-weblog/images/5h.jpg" width="80%" height="80%"></a>
+<a href="gh-weblog-2/images/5h.jpg" target="_blank"><img src="/images/5h.jpg" width="80%" height="80%"></a>
