--- a/gh-weblog/content/posts/markdown/2014-07-29-15-50-36.md
+++ b/gh-weblog/content/posts/markdown/2014-07-29-15-50-36.md
@@ -2,6 +2,6 @@ I bought a new [Wacom Intuos](http://www.amazon.com/Wacom-Intuos-Medium-Tablet-C
 
 Meet Pentagon Penguin:
 
-<img src="/gh-weblog/images/pentagonpenguin.jpg">
+<img src="/images/pentagonpenguin.jpg">
 
 He's good friends with Square Bear and Triangle Tiger, but those stories will have to come some other day.
