--- a/gh-weblog/content/posts/markdown/2015-03-30-23-21-21.md
+++ b/gh-weblog/content/posts/markdown/2015-03-30-23-21-21.md
@@ -6,16 +6,16 @@ After curing for about 24 hours, we have a fascinating situation: the lacquer is
 
 Sanding the outside is fairly straight forward. A hard plastic scraper for taking off the obvious crumbling along seams, followed by 600 grit wet sanding paper, cut in 1x2"bits, which is then used to smooth off the seams and clean up dirtied spots. One rule of thumb: use too much sand paper. Don't be frugal with that stuff, the moment it feels like it's not sanding anymore, move on to the next piece. You're not helping yourself by trying to be conservative in this step: use *all* the sand paper at your disposal. Buy more if you have to! =)
 
-<img src="/gh-weblog/images/kintsugi/day 2/sandpaper.jpg">
+<img src="/images/kintsugi/day 2/sandpaper.jpg">
 
 The result of sanding the outside:
 
-<img src="/gh-weblog/images/kintsugi/day 2/sanding-1.jpg">
+<img src="/images/kintsugi/day 2/sanding-1.jpg">
 
 That looks pretty decent, but the lacquer is still soft enough to feel bits wibble around, so I gingerly tried to do the inside too, but things didn't feel solid enough to do it as thorough as the outside, and I stopped short of thoroughly sanding things smooth:
 
-<img src="/gh-weblog/images/kintsugi/day 2/sanding-2.jpg">
+<img src="/images/kintsugi/day 2/sanding-2.jpg">
 
 For now, the cup goes back into elastic bands, with 7lbs on it, and we'll pick this story back up in another 24 hours.
 
-<img src="/gh-weblog/images/kintsugi/day 2/resting.jpg">
+<img src="/images/kintsugi/day 2/resting.jpg">
