--- a/gh-weblog/content/posts/markdown/2015-07-14-01-12-40.md
+++ b/gh-weblog/content/posts/markdown/2015-07-14-01-12-40.md
@@ -78,13 +78,13 @@ Now you've got your thinking-cap on: why are we still sampling the real world wi
 
 Why don't we just record colours using more sensors? We could use one red (680ish), three different greens (545,518,505), a cyan (490) and a blue (say 460ish) and now we'd be able to at least *capture* virtually all the colours that exist in the real world.
 
-<img src="/gh-weblog/images/cie-six-point.jpg" style="width:500px">
+<img src="/images/cie-six-point.jpg" style="width:500px">
 
 Does this make sense? From a computer science point of view: yes, totally. After all, this is our base data that we probably want to do things to, like lighten/darken, hue shift, blend, etc and only encoding the values that the human eye can see, rather than all the colours we actually have in real life, means that lots of colour operations are going to do "the wrong thing" for colours that live at the edges of the Gamut. Remove those edges, and things get much better.
 
 We can even efficiently store the numbers, because even though we have six primaries, we only ever need three primaries to form any colour, and then the other primaries can simply contribute a neutral intensity:
 
-<img src="/gh-weblog/images/cie-six-point-q.jpg" style="width:500px">
+<img src="/images/cie-six-point-q.jpg" style="width:500px">
 
 We have six primaries, so we have four quadrants, so we can neatly prefix any colour with two bits to indicate which quadrant it falls in, and then the intensities for the three primaries involved in that quadrant: a "green" would be "00" + {three intensities}, for instance.
 
