--- a/gh-weblog/content/posts/markdown/2015-08-06-20-02-06.md
+++ b/gh-weblog/content/posts/markdown/2015-08-06-20-02-06.md
@@ -2,7 +2,7 @@ This post is based on the original album over at http://imgur.com/gallery/hQRaL,
 
 ## Let's make this:
 
-<img src="/gh-weblog/images/baguette/bread.jpg" alt="Traditional french bread">
+<img src="/images/baguette/bread.jpg" alt="Traditional french bread">
 
 (or at least, let's make the bread part. This post is not about how to make pepper pâté, salame calabrese, or firm cheese)
 
@@ -25,25 +25,25 @@ This will yield four baguettes, weighing in at  280 to 290 gram each.
 
 ## Day 1: making dough (15m)
 
-<img src="/gh-weblog/images/baguette/bread-01.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-01.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 We start with 340 grams of flour, which is about 3 cups, but not every cup of flour weighs the same, so let's go with weight measurements.
 
-<img src="/gh-weblog/images/baguette/bread-02.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-02.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 To the flour we add about 3/4th of a tablespoon of salt, which is somewhere between 8 and 9 grams (it's hard to weigh salt if your scales only do 1 gram increments). Make sure to mix this in a little, instead of just sprinkling it on top.
 
 Also note we really do want plain salt. If your salt has an "ingredients" list, and it contains more than "sodium chloride", like preservatives, or potassium chloride (known in Europe as Kalium Chloride, KaCl), we don't want to use that. Thankfully, pure table salt is stupidly easy to come by, and any supermarket will sell 2kg boxes of the stuff for under $10, which will last you years.
 
-<img src="/gh-weblog/images/baguette/bread-03.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-03.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 In terms of water, we're adding two cups: 470 grams (473 if you want to be super technical)
 
-<img src="/gh-weblog/images/baguette/bread-04.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-04.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 next up: yeast. 1 teaspoon of active dry yeast, or about 3 grams. We want to dissolve this in the water before doing any mixing. It'll take a bit to dissolve properly: if we don't wait long enough, there will be some undissolved sludge left after we pour out the water. We want that sludge in the dough, not stuck to the bottom of our measuring cup.
 
-<img src="/gh-weblog/images/baguette/bread-05.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-05.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Once the yeast's dissolved, we add all the yeasty water to the flour and salt mixture, and create what can only be properly described as "a slurry".
 
@@ -51,11 +51,11 @@ We then mix this at a super low speed. I use a [Kitchenaid "Professional 550 Hea
 
 At low speed, we can basically mix for as long as we like without overworking the dough, which is important. Mixing too fast can literally destroy it.
 
-<img src="/gh-weblog/images/baguette/bread-06.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-06.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 While the mixer's running, we'll be adding another 340 grams (~3 cups) of flour to progressively work up the dough. We don't dump it all in at once because it'll take much longer to mix evenly, so the pictures above are after adding one cup at a time and waiting for most of the flour to be absorbed before adding the next cup.
 
-<img src="/gh-weblog/images/baguette/bread-07.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-07.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 Once all the flour's been absorbed into the dough, the dough's not actually fully mixed yet. It'll look ragged and tear because not all the flour's hydrated, so let it run for another minute or two and it should turn into a smooth, almost paste-like consistency. It might also look "too sticky" in places (especially at the bottom, where it might look like it's terminally sludge-stuck to the bowl). Don't worry: just let the mixing do its thing for 2 minutes, the dough will homogenise. That's what mixing does.
 
@@ -69,7 +69,7 @@ Taking the resulting dough out of the bowl (with clean, dry hands) and balling i
 
 ## Night 1: Low temperature fermentation
 
-<img src="/gh-weblog/images/baguette/bread-08.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-08.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 After balling up the dough, it goes into the fridge (with a pot lid as cover - they're all standard sizes, so one of your covers is bound to fit your bowl!) for a very slow, flavour developing fermentation. Note that we're not using any oil or spray to prevent the dough from sticking to the bowl. For one, oil is not used at any point in the traditional baguette process, but more importantly, if the bowl is smooth, then the dough we've just made is simply not going to stick to it. When we take it out tomorrow, it'll come out all on its own.
 
@@ -79,21 +79,21 @@ It is possible that the dough doesn't seem to rise at all in the fridge. Rather 
 
 ## Day 2: initial shaping (15m)
 
-<img src="/gh-weblog/images/baguette/bread-09.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-09.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 When we take the dough out in the morning, it'll have doubled again.
 
-<img src="/gh-weblog/images/baguette/bread-10.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-10.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 So, again, we punch it down to its original size.
 
-<img src="/gh-weblog/images/baguette/bread-11.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-11.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Now we start on a 15ish minute adventure of turning the ball of dough into loaves that we will set aside to proof for an hour or two.
 
 Take that dough and put it on a work surface.
 
-<img src="/gh-weblog/images/baguette/bread-12.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-12.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Cut it up into four pieces of equal weight, and ball them up. I've covered them with a bit of flour here to make sure they don't stick (as the dough warms back it, it becomes a bit stickier), and the excess flour from that gets moved off to a little pile on the corner of my worksurface, and gets used as necessary in the next step.
 
@@ -101,7 +101,7 @@ With the measurements used, each piece'll be around 275 grams. That's 25 grams m
 
 Also: yes, seriously. France has laws in place to guarantee certain properties of traditional bread. Enjoy some http://www.cooksinfo.com/french-bread-law-1993
 
-<img src="/gh-weblog/images/baguette/bread-13.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-13.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 Then we roll out the dough to about 30cm (12") sausages.
 
@@ -115,7 +115,7 @@ We're not aiming for speed here. I tend to do three rolls down per piece for eac
 
 If you need fewer: you're going too fast. The dough hasn't developed to a point where it'll take the kind of forces your subjecting it to, which will make it tear internally, so slow down.
 
-<img src="/gh-weblog/images/baguette/bread-14.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-14.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 After the third stage we need to give the loaves one more roll-down, leaving the ends "as is", with a little more pressure in the center, to make them roughly uniform-girth sausages.
 
@@ -133,7 +133,7 @@ Also, your loaves may not all be the same length. As long as the difference is a
 
 ## Proofing to dough: (roughly 2h)
 
-<img src="/gh-weblog/images/baguette/bread-15.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-15.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 There are many, many, *many* ways to proof dough, but I like precision, so I spent some money to get that: this is a generic roasting pan that also happens to work really well as a proofing pan, sitting on top of a heat mat intended for seeding vegetables and potting plants ([$40 for a 20"x20" mat](http://www.amazon.com/Hydrofarm-MT10008--20-Inch-Seedling-Heat/dp/B000E3DDP2)), hooked up to a [simple thermostat](http://www.amazon.com/Hydrofarm-MTPRTC-Digital-Thermostat-Heat/dp/B000NZZG3S) ($30). This mat can't really get all that hot, but the temperature range it produces is specific to germinating seeds, and the temperatures that are good for germinating seeds are exactly the same temperatures that are good for germinating yeast.
 
@@ -141,11 +141,11 @@ A cheaper option is to proof your bread in your oven with the oven light on (pro
 
 Basically: go with what works - my solution lets me say "proof at 35C" and then walk away for a while without needing to check whether it's doing what I'm hoping it's doing.
 
-<img src="/gh-weblog/images/baguette/bread-16.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-16.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 Let's enjoy the magic of time: on the left are the loaves that we got after rolling them into fat sauasages, before we start proofing. The middle shows the loaves after an hour (at which point we probably need to turn on the oven) and after another 45 minutes, we get the fat doughsplosions on the right.
 
-<img src="/gh-weblog/images/baguette/bread-17.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-17.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 If you're wonding why we need to turn on the oven 45 minutes before we actually start baking: we're actually turning it on about an hour before we start baking. Because it's going to take a long time to heat up properly: we're going to hearthbake.
 
@@ -157,21 +157,21 @@ Also, because your oven will lie to you about how hot it is, put a $5 oven therm
 
 ## Final shaping (10m)
 
-<img src="/gh-weblog/images/baguette/bread-18.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-18.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 After our 1 hour 45 of proofing, now comes the tricky part: getting the dough off the parchment. You could have, in theory, sprayed the parchment with some oil so that the dough doesn't get stuck at all, but again: we're making traditional French bread, not [focaccia](https://en.wikipedia.org/wiki/Focaccia) or pizza dough, and oil is not part of the process.
 
 My approach is to simply dust the loaves with flour after taking them out of the proofing box and then, using a flat scraper, starting from the sides, use short "scrapes" to get the scraper to underneath the loaf from the side, lift it up a little, and pull the scraper back. Gently repeat this up and down the loaf and it'll detach from the paper fairly quickly. Once losse, we can roll them off onto our work surface by simply lifting the paper between loaves.
 
-<img src="/gh-weblog/images/baguette/bread-18b.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-18b.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 In the above picture, you can see the parchment showing signs of scaping to the right, along the sides of the first loaf, with the second image showing the same process for the second loaf, after the first fully separated and got "rolled" off the parchement, resting upside down on the work surface.
 
-<img src="/gh-weblog/images/baguette/bread-19.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-19.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Of course, we do this four times... and while doing this, you'll notice that the dough is now *incredibly* supple and elastic, which is good: that's exactly what we need, because it'll make the dough "spring" in the oven beautifully.
 
-<img src="/gh-weblog/images/baguette/bread-20.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-20.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 To make the album-poster-bread up top, we now "fold" each loaf, by taking the sides, gently pulling them towards each other over the center, and pinching them so they stick together. This makes the loaves a little less wide, but will make them look rather pretty: after pinch-folding, flip them over back onto the parchment, making sure they stretch the length of the parchment.
 
@@ -179,7 +179,7 @@ You may get some pretty damn big bubbles while doing this, and if you're worried
 
 BUT: what if we skip this step? What if we just bake the soft and springy dough without pinch-folding it up on itself? Well... let's just say the result is bread, but it's bread with issues. After we finish up with the procedure for the bread up top, we'll look at what happens if we don't pinch-fold the dough. Be warned though: the result is pretty bad.
 
-<img src="/gh-weblog/images/baguette/bread-21.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-21.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 Placing the dough back on the parchment can seem tricky: because the dough's super elastic by now, they might stretch "too far", being too long for the parchment, but don't worry!
 
@@ -191,7 +191,7 @@ Also a fun fact: we're not really making true baguette, which is typically 65cm 
 
 If we were running a boulangerie in France, we would not be able to sell what we're making here as baguette, ficelle, or even as flûte. We'd have to come up with a new name.
 
-<img src="/gh-weblog/images/baguette/bread-22.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-22.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 Before loading the loaves in the oven, they need "scoring", in which we tactically cut into the dough so that when it goes into the oven it can expand in a controlled fashion, rather than by breaking through the crust haphazardly as it's forming.
 
@@ -205,7 +205,7 @@ Also: it's easy to cut "too deep", but the dough's also very relaxed atm, so if 
 
 If we make a mistake, we want to much rather cut too shallow than too deep. Why? If we score too deep, the bread will basically "deflate" before we can bake it, and it'll never rise. It'll come out terrible and will pretty much only be usable for bread pudding, if that. However, if we cut too shallow, the bread will find the weakest parts of the crust and literally burst at those seams as the heat of the oven forces it to expand. This will look gnarly, but is infinitely better than scoring too deep, because the bread itself is probably still going to be edible, and is quite likely even tasty. It'll just look really weird.
 
-<img src="/gh-weblog/images/baguette/bread-23.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-23.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Remember when I said to use a sharp knife? This is my solution: a $10 "speedy sharp" carbide sharpener and a 5" utility knife, both last considerably longer than disposable razors on a plastic handle. And no, you should not use a carbide sharpener as a regular sharpener, because it'll wreck your knives, but to maximise an edge with two or three strokes on an otherwise already sharpened knife, it's perfect.
 
@@ -214,13 +214,13 @@ Before scoring, I give the utility knife a quick sharpening, after which it'll s
 
 ## Baking (20m-25m)
 
-<img src="/gh-weblog/images/baguette/bread-24.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-24.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Finally, we can bake! Open the oven, remove the thermometer (yes, that's speaking from experience), load the breads onto the stone, and close the oven back up.
 
 Let the bread bake at 280C this way for 5 minutes. It needs a few minutes to "spring" into a shape that will let us pummel it with French baking tradition.
 
-<img src="/gh-weblog/images/baguette/bread-25.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-25.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 This is "sprung" dough: after those 5 minutes, no real baking has happened yet (despite the fact that it's been subjected to a constant 280C worth of heat), but the dough got hot enough, fast enough, for the gas trapped inside the dough to expand while the dough around it started hardening fast enough to trap the gas.
 
@@ -228,7 +228,7 @@ Have a look at those score lines: whereas initially they were only separated a f
 
 Now comes the fun part: steam.
 
-<img src="/gh-weblog/images/baguette/bread-26.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-26.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Steam is essential for proper crust development. Professional ovens have steam injection; we have a cup of water, instead.
 
@@ -244,7 +244,7 @@ Also, if you've never done this before, you might micro-damage your oven, becaus
 
 I've done this to my ovens often enough to not even give it a second thought (and I'll break in a new oven by running it through this procedure a few times until I'm sure there's no material ejection due to shocking), but if you're not, another option is to have a metal pan at the base of the oven, and pouring the water in that, rather than throwing it against the walls. It'll probably warp the pan, so make sure it's cheap and not a pan you actually care about, but your oven will stay pristine.
 
-<img src="/gh-weblog/images/baguette/bread-27.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-27.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 After steam baking for five minutes, we open the door to let out the steam.
 
@@ -262,11 +262,11 @@ Once the steam's been let out, close the oven door, turn the temperature down to
 
 This is also the point where I typically remove the parchment paper, because from here on out things are going to be hotter than parchment paper can deal with, and the bread's set enough to slide off the parchment without deforming.
 
-<img src="/gh-weblog/images/baguette/bread-28.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-28.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 If your oven seems to bake a little uneven, reorder the bread after 5 minutes. Mine bakes a little hot at the back, so I reorder the loaves such that they're reordered to least-baked-looking at the back (with the least baked side facing the back), most-baked-looking at the front (with the most baked side facing the door).
 
-<img src="/gh-weblog/images/baguette/bread-29.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-29.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 After the 10 minutes of regular baking, the result is this!
 
@@ -274,14 +274,14 @@ That looks pretty good! But this isn't a true hearth oven, and I find that the s
 
 Thankfully, there's a really simple way to deal with this.
 
-<img src="/gh-weblog/images/baguette/bread-30.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-30.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Turn off the oven, flip the bread over, and pop it back into the oven. The pizza stone will still be hot enough, but the ambient temperature will plummet, letting us send heat specifically up into the top and sides of the bread. I tend to do this for five minutes because it just yields a nicer bread.
 
 
 ## After baking (30m minimum)
 
-<img src="/gh-weblog/images/baguette/bread-31.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-31.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 Once baked, the bread is not done. Science teaches us that at this point, the dough inside the bread is technically gelatinised. It absolutely, positively, NEEDS to cool down before we can eat this bread, tempting as the bread smells. If you were to cut into it right now, it'd taste bad, and feel rubbery.
 
@@ -293,11 +293,11 @@ Since the crust will contract as it cools, and because it has nowhere to go, the
 
 If we don't hear crackling, we should be worried: we may have baked at too low a temperature, or we may not have used enough steam, or we may not have radiated the top enough at the end.
 
-<img src="/gh-weblog/images/baguette/bread-32.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-32.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 A quick look at the result of our scoring: that's some mighty fine expansion we got there.
 
-<img src="/gh-weblog/images/baguette/bread-33.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-33.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 So, let's look at the "crumb", which is bread jargon for the texture of the inside of the bread.
 
@@ -309,7 +309,7 @@ Now, the last thing we want is the kind of "dense, white bread texture" that you
 
 Instead, we want a good mix of fine, medium, and the occasional large hole.
 
-<img src="/gh-weblog/images/baguette/bread-34.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/bread-34.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 This will do! Now, finally, we can put some toppings on that and pig out on freshly baked traditional French bread.
 
@@ -318,7 +318,7 @@ And if you want to go over all these steps in a more structured, textual form, y
 
 ## What if we don't want to eat all the bread right away?
 
-<img src="/gh-weblog/images/baguette/bread-35.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-35.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Of course, you might be thinking "But wait, I don't have anywhere to keep these fresh..." but you might be wrong!
 
@@ -330,7 +330,7 @@ The reason paper is so great is that it doesn't trap moisture like plastic or a 
 
 Of course, the bread will lose some of its distinct crunchiness the next day, but we can bring that right back with this guy:
 
-<img src="/gh-weblog/images/baguette/bread-36.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/bread-36.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 The humble spray bottle.
 
@@ -346,25 +346,25 @@ When it comes to traditional French bread, second day bread can be just as good 
 
 ## So, what if we hadn't pinch-folded the dough?
 
-<img src="/gh-weblog/images/baguette/unshaped-01.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/unshaped-01.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Remember when we asked "but what happens if we don't pinch-fold the dough?"... let's examine that idea, because things would have turned out a little differently.
 
 For one, 69.5% hydration is too high for an unfolded loaf, and the dough doesn't really know where to spring to. The scores settle too quickly, so the loaves don't look very nice, and the large holes that formed during proofing stay pretty damn large. We had to poke a few holes during pinch-folding, and it was a good thing we did.
 
-<img src="/gh-weblog/images/baguette/unshaped-04.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/unshaped-04.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Big holes in the dough mean even bigger pockets of hot air at the surface of the bread as it bakes, which means that there isn't anything to act as a heat bufffer for the crust over an air pocket, and so the bread will bake very uneven: where there's dough, things'll generally be fine, but if there's a bubble, that section will bake much faster than the rest of the bread, leading to charred sections on an otherwise potentially decent bread.
 
 See if you can count the number of air pockets in just this section of one of the breads baked without pinch-folding.
 
-<img src="/gh-weblog/images/baguette/unshaped-02.jpg" style="max-height:500px; max-width: 500px" alt="">
+<img src="/images/baguette/unshaped-02.jpg" style="max-height:500px; max-width: 500px" alt="">
 
 Now, those huge pockets of air also make it much harder to use the bread "as bread". It might work well with a bowl of olive oil, but that's about it: the holes are just too big to make the bread of any practical use beyond "dipping bread".
 
 This is particularly obvious in the next close up picture.
 
-<img src="/gh-weblog/images/baguette/unshaped-03.jpg" style="max-height:500px; max-width: 100%" alt="">
+<img src="/images/baguette/unshaped-03.jpg" style="max-height:500px; max-width: 100%" alt="">
 
 As you can see, this isn't so much "bread" anymore as "slices of bready colander". Toppings are literally just going to fall through our slices.
 
