Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -68,3 +68,13 @@ The one thing I've not re-uplifted is image drag-and-drop so that I can just dra
 1. then drop the blob sha into the markdown as image code.
 
 Everything in that list is entirely doable but also the kind of pain I'd rather do "in follow-up" compared to holding the new platform deployment.
+
+### post folding
+
+Post folds are a pure HTML+CSS solution, no JS involved. It exploits the fact that `<details>` has been part of HTML 5 since its release, so if a post is over 1500 characters, the first few paragraphs are wrapped in a `<summary>` tag, and then CSS is used to replace the usual "drop down triangle" to the left of the summary into a normal looking "show entire post" button at the bottom instead. Click it, and the  full `<details>` element becomes visible, with some CSS that removes the button using the `details[open]` selector.
+
+No-JS solutions are the best solutions, even if your website *relies* on JS to work at all. Heck, I'd argue _especially_ when your site relies on JS, you should aim to not use JS as much as possible.
+
+Anyway, that's it, new blog platform, I still have some cleanup and final features left to do, but I'll probably write another post on it once it's ready for you to fork. Because that's all you should have to do: fork it, rename your fork to `yourusername.github.io`, enable pages for the `main` branch, and... that's it. Customize the CSS if you really want (you probably do?) but that's optional, you already have a blog online now. Sure, you're going to have to generate a token so you can actually _post_ but the instructions will cover that.
+
+Until then, I'm hoping to blog more often now that things are back to convenience levels of functional.
